<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:text="@string/tu_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor" />
        <TextView
            android:text="@string/crea_una_partida_nueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/nuevo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/nuevo"/>
        <EditText
            android:id="@+id/usuario2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pon_el_codigo"
            android:autofillHints="Codigo"
            android:inputType="text" />

        <Button
            android:id="@+id/unirse"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/unirse" />

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>